--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
 </head>
 <body>
     
     <header>
         <nav>
-            <a href="/" style="font-size: 0.8em; text-transform: uppercase;">&larr; Volver al índice</a>
+            <a href="{{ '/' | relative_url }}" style="font-size: 0.8em; text-transform: uppercase;">&larr; Volver al índice</a>
         </nav>
         <h1>{{ page.title }}</h1>
         {% if page.date %}
